derive/tests/snapshots/referenced_row_methods/Alliance/get_all_alliances.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `alliance` table.
    pub fn get_all_alliances<'a>(&'a self) -> impl Iterator<Item = Alliance> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().alliance().iter()
    }
}
