derive/tests/snapshots/referenced_row_methods/Alliance/get_alliances_by_server_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Alliance` iterator that contains all rows in the `alliance` table whose value matches the value from the single-column btree index on the `server_id` column.
    pub fn get_alliances_by_server_id<'a>(
        &'a self,
        server_id: impl Into<ServerId>,
    ) -> impl Iterator<Item = Alliance> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().alliance().server_id().filter(server_id.into().value())
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Alliance` iterator that contains all rows in the `alliance` table whose value matches the value from the single-column btree index on the `server_id` column.
    pub fn get_alliances_by_server_id<'a>(
        &'a self,
        server_id: impl Into<ServerId>,
    ) -> impl Iterator<Item = Alliance> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().alliance().server_id().filter(server_id.into().value())
    }
}
